# airflow-dbt-dev

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: README.md
dags/dbt/dbt_project/: dbt_project.yml  profiles.yml
dags/dbt/dbt_project/models/bronze/: bronze_dw_source.yml
dags/dbt/dbt_project/models/silver/: silver_countries.sql
dags/extraction/apis/: countries_api.py
dags/transformation/: dbt_transform.py
dags/utils/: python_iceberg_sdc2.py
